# LoreKeeper

./: .gitignore  .lighthouserc.production.json  AGENTS.md  README.md  index.html  lighthouserc.json  package-lock.json  package.json  vite.config.ts
.codex/: codex-os.manifest.json  verify.commands
.taskmaster/: config.json
codex/: CHANGELOG_DRAFT.md  CHECKPOINTS.md  DECISIONS.md  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  MODULE_GUIDE.md  PLAN.md  SESSION_LOG.md  VERIFICATION.md
docs/: internal-release-announcement.md  internal-release-checklist.md  internal-release-handoff.md  internal-release-macos.md  internal-release-team-update.md  linux-gtk-remediation-spike.md  (+2 more)
e2e/: features.spec.ts  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: achievements.rs  autocomplete.rs  combat.rs  editor.rs  game.rs  map.rs  mod.rs  modules.rs  narration.rs  replay.rs  save.rs  settings.rs  stats.rs  themes.rs
src-tauri/src/engine/: achievement_checker.rs  combat.rs  crafting.rs  dialogue.rs  dungeon_generator.rs  events.rs  executor.rs  hints.rs  mod.rs  module_loader.rs  parser.rs  quest.rs  templates.rs  world_builder.rs
src-tauri/src/models/: achievement.rs  crafting.rs  event.rs  item.rs  journal.rs  location.rs  mod.rs  module.rs  npc.rs  player.rs  quest.rs  settings.rs  world.rs
src-tauri/src/narrative/: context.rs  mod.rs  narrator.rs  ollama.rs  tone.rs
src-tauri/src/persistence/: achievements.rs  database.rs  mod.rs  save_load.rs  state.rs  stats.rs  validators.rs
(+100 files in other folders)
