[package]
name = "lorekeeper"
version = "0.1.0"
description = "A text adventure game with LLM narration"
authors = ["you"]
edition = "2021"

[lib]
name = "lorekeeper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.33", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
rand = "0.8"
tokio = { version = "1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "macros", "rt"] }
